--- a/lesson3/L3_Starter_Code.ipynb
+++ b/lesson3/L3_Starter_Code.ipynb
@@ -10,7 +10,9 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#!/usr/bin/env python\n",
@@ -78,7 +80,9 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# -*- coding: utf-8 -*-\n",
@@ -211,7 +215,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##"
+    "## 练习整理Json"
    ]
   },
   {
@@ -334,8 +338,9 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python2"
   },
@@ -349,7 +354,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
